Adicionado notas da aula 0006

--- a/0006.ipynb
+++ b/0006.ipynb
@@ -13,7 +13,218 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Dicionário"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nome': 'Carlos', 'peso': 64, 'idade': 30, 'profissao': 'backend developer'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "meu_dicionario = {\n",
+    "    'nome': \"Carlos\",\n",
+    "    'peso': 64,\n",
+    "    'idade': 30,\n",
+    "    'profissao': \"backend developer\"\n",
+    "}\n",
+    "print(meu_dicionario)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O nome do animal 1 é Murphy\n"
+     ]
+    }
+   ],
+   "source": [
+    "animal1 = {'espécie': 'Gato', 'idade': 6, \"peso\": 5.5, 'dono': 'Juliana', 'nome': 'Murphy'}\n",
+    "animal2 = {'nome': 'Koda', 'espécie': 'Cão', 'idade': 6, \"peso\": 19, 'dono': 'Carlos'}\n",
+    "\n",
+    "print(f\"O nome do animal 1 é {animal1['nome']}\")\n",
+    "\n",
+    "animais = [animal1, animal2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dados do murphye {'espécie': 'Gato', 'idade': 7, 'peso': 5.5, 'dono': 'Juliana', 'nome': 'Murphy'}\n",
+      "Dados atualizados {'espécie': 'Gato', 'idade': 7, 'peso': 5.5, 'dono': 'Juliana', 'nome': 'Murphy', 'observações': 'É muito preguiçoso e esfomeado, mas parece um tigre branco'}\n",
+      "Dados pós delete {'espécie': 'Gato', 'idade': 7, 'dono': 'Juliana', 'nome': 'Murphy', 'observações': 'É muito preguiçoso e esfomeado, mas parece um tigre branco'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dados_do_murphy = {'espécie': 'Gato', 'idade': 6, \"peso\": 5.5, 'dono': 'Juliana', 'nome': 'Murphy'}\n",
+    "dados_do_murphy['idade'] = dados_do_murphy['idade'] + 1\n",
+    "\n",
+    "print(f\"Dados do murphye {dados_do_murphy}\")\n",
+    "\n",
+    "dados_do_murphy['observações'] = 'É muito preguiçoso e esfomeado, mas parece um tigre branco'\n",
+    "\n",
+    "print(f'Dados atualizados {dados_do_murphy}')\n",
+    "\n",
+    "del dados_do_murphy['peso']\n",
+    "print(f'Dados pós delete {dados_do_murphy}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O valor de espécie é Gato\n",
+      "O valor de idade é 6\n",
+      "O valor de peso é 5.5\n",
+      "O valor de dono é Juliana\n",
+      "O valor de nome é Murphy\n",
+      "O valor de nome é Koda\n",
+      "O valor de espécie é Cão\n",
+      "O valor de idade é 6\n",
+      "O valor de peso é 19\n",
+      "O valor de dono é Carlos\n"
+     ]
+    }
+   ],
+   "source": [
+    "animais = [\n",
+    "    {\n",
+    "        'espécie': 'Gato',\n",
+    "        'idade': 6,\n",
+    "        \"peso\": 5.5,\n",
+    "        'dono': 'Juliana',\n",
+    "        'nome': 'Murphy',\n",
+    "    },\n",
+    "    {\n",
+    "        'nome': 'Koda',\n",
+    "        'espécie': 'Cão',\n",
+    "        'idade': 6,\n",
+    "        \"peso\": 19,\n",
+    "        'dono': 'Carlos',\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "# Jeito 1\n",
+    "# for animal in animais:\n",
+    "#     for palavra in animal:\n",
+    "#         print(f\"O valor de {palavra} é {animal[palavra]}\")\n",
+    "\n",
+    "# Jeito 2\n",
+    "for animal in animais:\n",
+    "    for chave, valor in animal.items():\n",
+    "        print(f\"O valor de {chave} é {valor}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Liberdade', 'Penha', 'Lapa', 'Leopoldina', 'Osasco', 'Pinheiros', 'Itaquera', 'Sé']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "lugares_visitados = [\n",
+    "    \"Liberdade\",\n",
+    "    \"Penha\",\n",
+    "    \"Lapa\", \n",
+    "    \"Liberdade\",\n",
+    "    \"Leopoldina\",\n",
+    "    \"Osasco\",\n",
+    "    \"Lapa\",\n",
+    "    \"Pinheiros\",\n",
+    "    \"Itaquera\",\n",
+    "    \"Pinheiros\",\n",
+    "    \"Sé\",\n",
+    "    \"Liberdade\"\n",
+    "]\n",
+    "\n",
+    "lugares_em_que_ja_passei = []\n",
+    "\n",
+    "for lugar in lugares_visitados:\n",
+    "    if lugar not in lugares_em_que_ja_passei:\n",
+    "        lugares_em_que_ja_passei.append(lugar)\n",
+    "\n",
+    "print(lugares_em_que_ja_passei)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Liberdade', 'Lapa', 'Pinheiros', 'Osasco', 'Sé', 'Leopoldina', 'Penha', 'Itaquera'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "lugares_em_que_ja_passei = set() # Ná prática, o `set` é um dicionário sem os valores. É um dicionário especial que possui somente as chaves\n",
+    "for lugar in lugares_visitados:\n",
+    "    lugares_em_que_ja_passei.add(lugar)\n",
+    "\n",
+    "print(lugares_em_que_ja_passei)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extra\n",
+    "\n",
+    "No python\n",
+    "\n",
+    "- `list()` é a mesma coisa que `[]`\n",
+    "- `dict()` é a mesma coisa que `{}`"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,8 +337,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
