--- a/juliana/juliana_notebook.ipynb
+++ b/juliana/juliana_notebook.ipynb
@@ -8,6 +8,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conteúdos sobre dicionário: \n",
+    "\n",
+    "https://iaexpert.academy/2019/09/12/dicionarios-em-python/\n",
+    "\n",
+    "https://pythonacademy.com.br/blog/dicts-ou-dicionarios-no-python\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
